apps/base/dev-argo-workflows/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-argo-workflows
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
