apps/base/dev-argo-workflows/deploy/workflow-controller-service-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: workflow-controller-metrics
  labels:
    app.kubernetes.io/name: argo-workflows
    app.kubernetes.io/component: workflow-controller
    prometheus-target: argo-workflow-controller
spec:
  ports:
  - name: metrics
    port: 9090
    targetPort: 9090
  selector:
    app.kubernetes.io/name: argo-workflows
    app.kubernetes.io/component: workflow-controller
